--- a/assian.ipynb
+++ b/assian.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#1.arithmetic operations on NumPy arrays\n"
+        "#1)arithmetic operations on NumPy arrays\n"
       ],
       "metadata": {
         "id": "VJlptzE86FbA"
@@ -36,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jPlSvopa2fh8",
-        "outputId": "0a3cea8e-f6dd-4928-e3a6-270bcc65f94a"
+        "outputId": "baf1f49f-1792-4a6a-8344-c351048cb6c3"
       },
       "outputs": [
         {
@@ -103,7 +104,42 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#3.NumPy array of integers from 10 to 50 with a step size of 5.\n"
+        "#2)Write a script to compute the mean and standard deviation of a NumPy array."
+      ],
+      "metadata": {
+        "id": "-GYlxRqX88Yy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ke=([1,2,3,4,5])\n",
+        "print(\"mean of the array is \",k.mean(ke))\n",
+        "print(\"standard devation is \",k.std(ke))"
+      ],
+      "metadata": {
+        "id": "JOWARF6f9El5",
+        "outputId": "49ab794e-8aed-4871-bbe5-0aff69c839ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mean of the array is  3.0\n",
+            "standard devation is  1.4142135623730951\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#3)NumPy array of integers from 10 to 50 with a step size of 5.\n"
       ],
       "metadata": {
         "id": "YvLutnN1VV_B"
@@ -114,7 +150,7 @@
       "source": [
         "import numpy as ka\n",
         "a1=ka.arange(10,51,5)\n",
-        "print(a1)\n"
+        "print(a1)"
       ],
       "metadata": {
         "colab": {
@@ -123,7 +159,7 @@
         "id": "T02c-_HhJY0E",
         "outputId": "197eb01f-88e3-44ec-c2fb-98a5ec9e0990"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +173,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#4.Reshape the array into a 2x4 matrix"
+        "#4)Reshape the array into a 2x4 matrix"
       ],
       "metadata": {
         "id": "t7tcVfRiZAqF"
@@ -181,11 +217,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#5.\n",
-        "##• Extract the sub-matrix containing the last two rows and first two columns"
+        "#5)\n"
       ],
       "metadata": {
         "id": "3H9LITzIbRjE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##(i)Extract the sub-matrix containing the last two rows and first two columns"
+      ],
+      "metadata": {
+        "id": "2S_DaEwv9nhC"
       }
     },
     {
@@ -225,7 +269,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##• Replace all elements greater than 4 with 0"
+        "##(ii)Replace all elements greater than 4 with 0"
       ],
       "metadata": {
         "id": "dKIuT5XRd-ki"
@@ -275,7 +319,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#6.Create two 1D arrays and Perform element-wise addition, multiplication, and division."
+        "#6)Create two 1D arrays and Perform element-wise addition, multiplication, and division."
       ],
       "metadata": {
         "id": "vaFJkDgVjWuO"
@@ -317,10 +361,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#7. Create a random NumPy array of size (4, 4). Compute:  \n",
-        "##• Mean of each column.\n",
-        "##• Maximum value of the entire array.\n",
-        "##• Sum of all elements."
+        "#7. Create a random NumPy array of size (4, 4). Compute:  "
       ],
       "metadata": {
         "id": "eCaWfJoil_l7"
@@ -331,42 +372,26 @@
       "source": [
         "import numpy as np\n",
         "r_array = np.random.randint(1, 101, size=(4, 4))\n",
-        "print(\"the random array is\\n\",r_array)\n",
-        "print(\"------------------------------------------\")\n",
-        "print(\"mean of the each column\\n\",np.mean(r_array,axis=0))\n",
-        "print(\"------------------------------------------\")\n",
-        "print(\"Maximum value of the entire array\\n\",np.max(r_array))\n",
-        "print(\"------------------------------------------\")\n",
-        "print(\"Sum of all elements\",np.sum(r_array))\n",
-        "\n",
-        "\n"
+        "print(\"the random array is\\n\",r_array)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e0WzDTvVmny6",
-        "outputId": "5479e27d-c5d1-4950-b253-889592bfbde1"
+        "outputId": "61153c97-392a-4f6b-ce0b-b786ce9f2d6f"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "the random array is\n",
-            " [[47 51 43 15]\n",
-            " [32 89 46 54]\n",
-            " [33 81  3  8]\n",
-            " [78 70  4 11]]\n",
-            "------------------------------------------\n",
-            "mean of the each column\n",
-            " [47.5  72.75 24.   22.  ]\n",
-            "------------------------------------------\n",
-            "Maximum value of the entire array\n",
-            " 89\n",
-            "------------------------------------------\n",
-            "Sum of all elements 665\n"
+            " [[53 53 58 92]\n",
+            " [89 42 16 37]\n",
+            " [57 85 32 32]\n",
+            " [15 85 83 60]]\n"
           ]
         }
       ]
@@ -374,7 +399,112 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#8.Given the array and add 10 to each element and multiply the result by 2."
+        "##(i)Mean of each column.\n"
+      ],
+      "metadata": {
+        "id": "_xgFnhFc-gTS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"mean of the each column\\n\",np.mean(r_array,axis=0))"
+      ],
+      "metadata": {
+        "id": "lO08piYt-xUa",
+        "outputId": "cf032941-f2c4-4044-a9e9-885e174a1bf8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mean of the each column\n",
+            " [53.5  66.25 47.25 55.25]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "L_IhrYon-w7i"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##(ii)Maximum value of the entire array."
+      ],
+      "metadata": {
+        "id": "RhF3y6pf_UEi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Maximum value of the entire array\\n\",np.max(r_array))\n"
+      ],
+      "metadata": {
+        "id": "v--AlgUO_K3y",
+        "outputId": "0ff541c6-9e6b-429c-8a38-18ca4aa23e5e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Maximum value of the entire array\n",
+            " 92\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##(iii) Sum of all elements."
+      ],
+      "metadata": {
+        "id": "PlIL3XV0_Diz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"sum of all elements in array is\",np.sum(r_array))"
+      ],
+      "metadata": {
+        "id": "cqBi347V_hZK",
+        "outputId": "e66cbc80-4b80-4a7b-8de1-cc5a483463cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sum of all elements in array is 889\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#8)Given the array and add 10 to each element and multiply the result by 2."
       ],
       "metadata": {
         "id": "WLNivAnArVE2"
@@ -427,29 +557,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RVBqB6BgsJFV",
-        "outputId": "e06a3b5f-5a12-4a00-92b8-4a6ce078e55e"
+        "outputId": "b97c6766-1432-480b-feec-90e6bb58d4b0"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Original Array:\n",
-            " [[[69 94 58 34 67]\n",
-            "  [99 34 46 49 35]\n",
-            "  [12  8 61 86 16]\n",
-            "  [50 94 32 23 29]]\n",
+            " [[[ 39  89 100  11  66]\n",
+            "  [ 53  74  79   2  77]\n",
+            "  [ 80  69  93  96  86]\n",
+            "  [ 41  25  51  67  16]]\n",
             "\n",
-            " [[37 72 86  5 81]\n",
-            "  [78 85 60 29 91]\n",
-            "  [73 41 49 71 79]\n",
-            "  [56 84 28 19 13]]\n",
+            " [[ 77  48  94  51  72]\n",
+            "  [ 77  21  49  52  44]\n",
+            "  [ 22  82  82  94  41]\n",
+            "  [ 23  75  91  52  84]]\n",
             "\n",
-            " [[84 42 76 41  2]\n",
-            "  [ 4 21 55 54 58]\n",
-            "  [59 57 23 10 75]\n",
-            "  [70  7  8 89 83]]]\n"
+            " [[ 74  89   4  92  74]\n",
+            "  [ 80   3  75  29  74]\n",
+            "  [ 11  81  69  15  87]\n",
+            "  [ 65  56   4  51  27]]]\n"
           ]
         }
       ]
@@ -457,9 +587,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##• Extract the second \"layer\" (i.e., the second 2D array) in the first dimension.\n",
-        "##• Extract the first two rows and the last three columns from each \"layer.\"\n",
-        "##• Replace all elements divisible by 3 with -1."
+        "##(i)Extract the second \"layer\" (i.e., the second 2D array) in the first dimension.\n"
       ],
       "metadata": {
         "id": "yDVU36vLr-IX"
@@ -468,26 +596,17 @@
     {
       "cell_type": "code",
       "source": [
-        "#1. Extract the second \"layer\" in the first dimension\n",
         "second_layer = arr2[1, :, :]\n",
-        "print(\"\\nSecond Layer:\\n\", second_layer)\n",
-        "\n",
-        "# 2. Extract the first two rows and the last three columns from each \"layer\"\n",
-        "sub_array = arr2[:, :2, -3:]\n",
-        "print(\"\\nFirst two rows and last three columns from each layer:\\n\", sub_array)\n",
-        "\n",
-        "# 3. Replace all elements divisible by 3 with -1\n",
-        "arr2[arr2 % 3 == 0] = -1\n",
-        "print(\"\\nArray after replacing elements divisible by 3 with -1:\\n\", arr2)\n"
+        "print(\"\\nSecond Layer:\\n\", second_layer)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_aWJIOKes6UX",
-        "outputId": "87c355bc-1aee-4474-c96d-d38ea2c1f3c7"
+        "outputId": "3efb8bf5-8cc4-4794-8ca8-8a96e1e8ca65"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,36 +614,100 @@
           "text": [
             "\n",
             "Second Layer:\n",
-            " [[37 72 86  5 81]\n",
-            " [78 85 60 29 91]\n",
-            " [73 41 49 71 79]\n",
-            " [56 84 28 19 13]]\n",
+            " [[77 48 94 51 72]\n",
+            " [77 21 49 52 44]\n",
+            " [22 82 82 94 41]\n",
+            " [23 75 91 52 84]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##(ii)Extract the first two rows and the last three columns from each \"layer.\"\n"
+      ],
+      "metadata": {
+        "id": "nNItu5MTAkdT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sub_array = arr2[:, :2, -3:]\n",
+        "print(\"\\nFirst two rows and last three columns from each layer:\\n\", sub_array)"
+      ],
+      "metadata": {
+        "id": "fGEG9SWGBB6S",
+        "outputId": "9e41f582-e8df-4d8f-aa7f-ebb99e96db3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "\n",
             "First two rows and last three columns from each layer:\n",
-            " [[[58 34 67]\n",
-            "  [46 49 35]]\n",
+            " [[[100  11  66]\n",
+            "  [ 79   2  77]]\n",
             "\n",
-            " [[86  5 81]\n",
-            "  [60 29 91]]\n",
+            " [[ 94  51  72]\n",
+            "  [ 49  52  44]]\n",
             "\n",
-            " [[76 41  2]\n",
-            "  [55 54 58]]]\n",
+            " [[  4  92  74]\n",
+            "  [ 75  29  74]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##(iii)Replace all elements divisible by 3 with -1."
+      ],
+      "metadata": {
+        "id": "f-z8kCfiAuSD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr2[arr2 % 3 == 0] = -1\n",
+        "print(\"\\nArray after replacing elements divisible by 3 with -1:\\n\", arr2)"
+      ],
+      "metadata": {
+        "id": "qt3VBAV5BEPS",
+        "outputId": "7b383388-b9b3-436b-ef4a-b6aa1399c62b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "\n",
             "Array after replacing elements divisible by 3 with -1:\n",
-            " [[[-1 94 58 34 67]\n",
-            "  [-1 34 46 49 35]\n",
-            "  [-1  8 61 86 16]\n",
-            "  [50 94 32 23 29]]\n",
+            " [[[ -1  89 100  11  -1]\n",
+            "  [ 53  74  79   2  77]\n",
+            "  [ 80  -1  -1  -1  86]\n",
+            "  [ 41  25  -1  67  16]]\n",
             "\n",
-            " [[37 -1 86  5 -1]\n",
-            "  [-1 85 -1 29 91]\n",
-            "  [73 41 49 71 79]\n",
-            "  [56 -1 28 19 13]]\n",
+            " [[ 77  -1  94  -1  -1]\n",
+            "  [ 77  -1  49  52  44]\n",
+            "  [ 22  82  82  94  41]\n",
+            "  [ 23  -1  91  52  -1]]\n",
             "\n",
-            " [[-1 -1 76 41  2]\n",
-            "  [ 4 -1 55 -1 58]\n",
-            "  [59 -1 23 10 -1]\n",
-            "  [70  7  8 89 83]]]\n"
+            " [[ 74  89   4  92  74]\n",
+            "  [ 80  -1  -1  29  74]\n",
+            "  [ 11  -1  -1  -1  -1]\n",
+            "  [ 65  56   4  -1  -1]]]\n"
           ]
         }
       ]
@@ -590,24 +773,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#2. Write a script to compute the mean and standard deviation of a NumPy array."
-      ],
-      "metadata": {
-        "id": "-Ca6jeYEEY6X"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "XKLw8732ElF-"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
