--- a/assian.ipynb
+++ b/assian.ipynb
@@ -118,11 +118,11 @@
         "print(\"standard devation is \",k.std(ke))"
       ],
       "metadata": {
-        "id": "JOWARF6f9El5",
-        "outputId": "49ab794e-8aed-4871-bbe5-0aff69c839ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JOWARF6f9El5",
+        "outputId": "49ab794e-8aed-4871-bbe5-0aff69c839ca"
       },
       "execution_count": 26,
       "outputs": [
@@ -411,11 +411,11 @@
         "print(\"mean of the each column\\n\",np.mean(r_array,axis=0))"
       ],
       "metadata": {
-        "id": "lO08piYt-xUa",
-        "outputId": "cf032941-f2c4-4044-a9e9-885e174a1bf8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lO08piYt-xUa",
+        "outputId": "cf032941-f2c4-4044-a9e9-885e174a1bf8"
       },
       "execution_count": 30,
       "outputs": [
@@ -451,11 +451,11 @@
         "print(\"Maximum value of the entire array\\n\",np.max(r_array))\n"
       ],
       "metadata": {
-        "id": "v--AlgUO_K3y",
-        "outputId": "0ff541c6-9e6b-429c-8a38-18ca4aa23e5e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "v--AlgUO_K3y",
+        "outputId": "0ff541c6-9e6b-429c-8a38-18ca4aa23e5e"
       },
       "execution_count": 29,
       "outputs": [
@@ -484,11 +484,11 @@
         "print(\"sum of all elements in array is\",np.sum(r_array))"
       ],
       "metadata": {
-        "id": "cqBi347V_hZK",
-        "outputId": "e66cbc80-4b80-4a7b-8de1-cc5a483463cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cqBi347V_hZK",
+        "outputId": "e66cbc80-4b80-4a7b-8de1-cc5a483463cc"
       },
       "execution_count": 28,
       "outputs": [
@@ -638,11 +638,11 @@
         "print(\"\\nFirst two rows and last three columns from each layer:\\n\", sub_array)"
       ],
       "metadata": {
-        "id": "fGEG9SWGBB6S",
-        "outputId": "9e41f582-e8df-4d8f-aa7f-ebb99e96db3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fGEG9SWGBB6S",
+        "outputId": "9e41f582-e8df-4d8f-aa7f-ebb99e96db3d"
       },
       "execution_count": 33,
       "outputs": [
@@ -680,11 +680,11 @@
         "print(\"\\nArray after replacing elements divisible by 3 with -1:\\n\", arr2)"
       ],
       "metadata": {
-        "id": "qt3VBAV5BEPS",
-        "outputId": "7b383388-b9b3-436b-ef4a-b6aa1399c62b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qt3VBAV5BEPS",
+        "outputId": "7b383388-b9b3-436b-ef4a-b6aa1399c62b"
       },
       "execution_count": 34,
       "outputs": [
@@ -715,10 +715,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#10. Work with broadcasting and advanced operations in NumPy. Create a NumPy array arr of shape (3, 3) with random integers between  1 and 20.\n",
-        "##• Subtract the mean of each row from its respective elements (row-wise normalization).\n",
-        "##• Create a new array by squaring all the elements in arr.\n",
-        "##• Find the indices of the top 3 maximum values in the entire array"
+        "#10. Work with broadcasting and advanced operations in NumPy. Create a NumPy array arr of shape (3, 3) with random integers between  1 and 20.\n"
       ],
       "metadata": {
         "id": "2LJaycVutyek"
@@ -728,48 +725,153 @@
       "cell_type": "code",
       "source": [
         "arr4 = np.random.randint(1, 21, size=(3, 3))\n",
-        "print(\"Original Array (arr4):\\n\", arr4)\n",
-        "row_means = np.mean(arr4, axis=1, keepdims=True)\n",
-        "normalized_arr = arr4 - row_means\n",
-        "print(\"\\nRow-wise Normalized Array (mean subtracted):\\n\", normalized_arr)\n",
-        "\n",
-        "# 3. Create a new array by squaring all the elements in arr4\n",
-        "squared_arr = np.square(arr4)\n",
-        "print(\"\\nArray with squared elements:\\n\", squared_arr)\n",
-        "\n",
-        "# 4. Find the indices of the top 3 maximum values in the entire array\n",
-        "top_3_indices = np.unravel_index(np.argsort(arr4, axis=None)[-3:], arr4.shape)\n",
-        "print(\"\\nIndices of the top 3 maximum values:\", top_3_indices)"
+        "print(\"Original Array (arr4):\\n\", arr4)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SB1zmzWB2U58",
-        "outputId": "5b376c3f-7cf5-4220-d7f7-95296c7965d1"
+        "outputId": "5a030f8b-7a34-4547-8bbd-7feb4ffce8bb"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Original Array (arr4):\n",
-            " [[16  8  8]\n",
-            " [ 8 15 18]\n",
-            " [18 19 19]]\n",
+            " [[ 9 19 12]\n",
+            " [10 15 19]\n",
+            " [17 18  5]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####(i)Subtract the mean of each row from its respective elements (row-wise normalization).\n"
+      ],
+      "metadata": {
+        "id": "UBl8mhi4Dbsb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Original Array (arr4):\\n\", arr4)\n",
+        "row_means = np.mean(arr4, axis=1, keepdims=True)\n",
+        "normalized_arr = arr4 - row_means\n",
+        "print(\"\\nRow-wise Normalized Array (mean subtracted):\\n\", normalized_arr)"
+      ],
+      "metadata": {
+        "id": "plHfXobTDtUC",
+        "outputId": "8de6f44d-77e9-45a1-d640-b23b89ef796a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original Array (arr4):\n",
+            " [[18 16 17]\n",
+            " [16  3  1]\n",
+            " [ 1 13 10]]\n",
             "\n",
             "Row-wise Normalized Array (mean subtracted):\n",
-            " [[ 5.33333333 -2.66666667 -2.66666667]\n",
-            " [-5.66666667  1.33333333  4.33333333]\n",
-            " [-0.66666667  0.33333333  0.33333333]]\n",
+            " [[ 1.         -1.          0.        ]\n",
+            " [ 9.33333333 -3.66666667 -5.66666667]\n",
+            " [-7.          5.          2.        ]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##(ii) Create a new array by squaring all the elements in arr.\n"
+      ],
+      "metadata": {
+        "id": "KPzYhwtlDfXC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Original Array (arr4):\\n\", arr4)\n",
+        "squared_arr = np.square(arr4)\n",
+        "print(\"\\nArray with squared elements:\\n\", squared_arr)"
+      ],
+      "metadata": {
+        "id": "rpX8voKBDt0i",
+        "outputId": "af6a7b7a-6ebf-4a41-9abc-679fd9f17d14",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original Array (arr4):\n",
+            " [[18 16 17]\n",
+            " [16  3  1]\n",
+            " [ 1 13 10]]\n",
             "\n",
             "Array with squared elements:\n",
-            " [[256  64  64]\n",
-            " [ 64 225 324]\n",
-            " [324 361 361]]\n",
-            "\n",
-            "Indices of the top 3 maximum values: (array([2, 2, 2]), array([0, 1, 2]))\n"
+            " [[324 256 289]\n",
+            " [256   9   1]\n",
+            " [  1 169 100]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##(iii)Find the indices of the top 3 maximum values in the entire array"
+      ],
+      "metadata": {
+        "id": "b3q0Tu2WDjAS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Original Array (arr4):\\n\", arr4)\n",
+        "d1=arr4.flatten()\n",
+        "s2=np.argsort(d1)[6:]\n",
+        "r2=s2//arr4.shape[1]\n",
+        "g2=s2%arr4.shape[1]\n",
+        "t3=list(zip(r2,g2))\n",
+        "print(\"top 3 maximum values indicies :\\n\",t3)"
+      ],
+      "metadata": {
+        "id": "9eSpuT5FDuMa",
+        "outputId": "d9be6842-55ec-43c3-93b4-6c7964627499",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original Array (arr4):\n",
+            " [[ 9 19 12]\n",
+            " [10 15 19]\n",
+            " [17 18  5]]\n",
+            "top 3 maximum values indicies :\n",
+            " [(2, 1), (0, 1), (1, 2)]\n"
           ]
         }
       ]
