--- a/assianment-2.ipynb
+++ b/assianment-2.ipynb
@@ -33,7 +33,7 @@
       "metadata": {
         "id": "y4FsKgA8OnaZ"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -102,7 +102,7 @@
         "id": "c3FfwKdqPxU5",
         "outputId": "fa0a9d44-a965-4f85-c6af-c21051cb09cf"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +154,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +197,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +245,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +286,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,8 +307,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#4) Create the following DataFrame:\n",
-        ""
+        "#4) Create the following DataFrame:\n"
       ],
       "metadata": {
         "id": "hVFy_SUW1I35"
@@ -333,7 +332,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,7 +372,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +417,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,7 +468,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -509,7 +508,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,7 +550,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,32 +586,46 @@
     {
       "cell_type": "code",
       "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Create the DataFrame\n",
         "data9 = {\n",
         "    'Name': ['Alice', 'Bob', 'Carol'],\n",
         "    'Age': [25, 30, None],\n",
         "    'Salary': [50000, 55000, 60000],\n",
         "    'Department': ['HR', 'IT', 'Finance']\n",
         "}\n",
-        "df9 = k.DataFrame(data9)\n",
+        "df9 = pd.DataFrame(data9)\n",
+        "\n",
         "print(\"Original DataFrame:\")\n",
         "print(df9)\n",
-        "df9['Age'].fillna(df9['Age'].mean(), inplace=True)\n",
-        "df9.drop_duplicates(inplace=True)\n",
+        "\n",
+        "# Fill missing values in 'Age' with the mean of the column\n",
+        "df9['Age'] = df9['Age'].fillna(df9['Age'].mean())\n",
+        "\n",
+        "# Remove duplicate rows\n",
+        "df9 = df9.drop_duplicates()\n",
+        "\n",
         "print(\"\\nDataFrame after cleaning:\")\n",
         "print(df9)\n",
+        "\n",
+        "# Display basic statistics\n",
         "print(\"\\nBasic Statistics:\")\n",
         "print(df9.describe())\n",
+        "\n",
+        "# Display information about the DataFrame\n",
         "print(\"\\nDataFrame Info:\")\n",
-        "print(df9.info())\n"
+        "df9.info()\n",
+        "\n"
       ],
       "metadata": {
         "id": "ULFQ4iVthXvg",
-        "outputId": "d300e8b2-65ef-4d49-dc85-3eb3203db5f4",
+        "outputId": "1ba69299-9046-4c4d-930b-f78ebbf59f72",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -652,21 +665,7 @@
             " 2   Salary      3 non-null      int64  \n",
             " 3   Department  3 non-null      object \n",
             "dtypes: float64(1), int64(1), object(2)\n",
-            "memory usage: 224.0+ bytes\n",
-            "None\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-29-676f051f5e81>:10: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  df9['Age'].fillna(df9['Age'].mean(), inplace=True)\n"
+            "memory usage: 224.0+ bytes\n"
           ]
         }
       ]
@@ -674,10 +673,82 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#(8)"
+        "#(8) small EDA task"
       ],
       "metadata": {
         "id": "TjRtPttRl3SP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##(i)Load the Titanic dataset (titanic.csv) into a Pandas DataFrame"
+      ],
+      "metadata": {
+        "id": "SdD49LeLztNL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xlqU8V7T0vr4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##(ii)Perform the following tasks:\n"
+      ],
+      "metadata": {
+        "id": "87bD4fdwz3iQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##1.Display the number of missing values in each column."
+      ],
+      "metadata": {
+        "id": "fgnh4QV80PoI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "im70yxyf0uGI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##2.Find the average age of passengers."
+      ],
+      "metadata": {
+        "id": "3yA7STxZ0aFA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NyPsHYy90rWc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##3.Create a bar plot to show the survival rate based on gender."
+      ],
+      "metadata": {
+        "id": "_FxT6On70ghY"
       }
     },
     {
@@ -692,8 +763,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#(9)Data Transformation Load a dataset containing daily temperatures and dates. Perform the following:\n",
-        ""
+        "#(9)Data Transformation Load a dataset containing daily temperatures and dates. Perform the following:\n"
       ],
       "metadata": {
         "id": "xTy9SRJMm2YD"
@@ -711,12 +781,12 @@
       ],
       "metadata": {
         "id": "npgohiEinPs5",
-        "outputId": "28ba496e-d446-4adc-83f9-dc70ff734b55",
+        "outputId": "a6103b8f-160a-4d4e-853c-70c75637bab4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -742,6 +812,46 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "print(\"the dataframe is\\n \",g4)\n",
+        "g4['Date'] = k.to_datetime(g4['Date'])\n",
+        "print(\"after convert date colum into datatime object\\n\")\n",
+        "print(g4)"
+      ],
+      "metadata": {
+        "id": "rwjrmNodvSNt",
+        "outputId": "6fd3ea80-b237-4a35-dcea-d589027077a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the dataframe is\n",
+            "          Date  Temperature\n",
+            "0 2024-12-01           30\n",
+            "1 2024-12-02           25\n",
+            "2 2024-12-03           18\n",
+            "3 2024-12-04           35\n",
+            "4 2024-12-05           22\n",
+            "after convert date colum into datatime object\n",
+            "\n",
+            "        Date  Temperature\n",
+            "0 2024-12-01           30\n",
+            "1 2024-12-02           25\n",
+            "2 2024-12-03           18\n",
+            "3 2024-12-04           35\n",
+            "4 2024-12-05           22\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "##(ii)o Create a new column that categorizes temperatures into High, Medium, or Low."
@@ -749,6 +859,45 @@
       "metadata": {
         "id": "WS9UUjcRnIiU"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def categorize_temperature(temp):\n",
+        "    if temp >= 30:\n",
+        "        return 'High'\n",
+        "    elif temp >= 20:\n",
+        "        return 'Medium'\n",
+        "    else:\n",
+        "        return 'Low'\n",
+        "\n",
+        "g4['Temperature Category'] = g4['Temperature'].apply(categorize_temperature)\n",
+        "print(\"after addiing column \")\n",
+        "print(g4)"
+      ],
+      "metadata": {
+        "id": "6JRvKkMRwQn1",
+        "outputId": "77142fbb-fce9-43ef-dccc-ed19be94f806",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "after addiing column \n",
+            "        Date  Temperature Temperature Category\n",
+            "0 2024-12-01           30                 High\n",
+            "1 2024-12-02           25               Medium\n",
+            "2 2024-12-03           18                  Low\n",
+            "3 2024-12-04           35                 High\n",
+            "4 2024-12-05           22               Medium\n"
+          ]
+        }
+      ]
     }
   ]
 }
